# education_platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-local.yml  docker-compose.yml  example.env  package-lock.json  package.json  pre-commit-config.yaml
.infra/: Chart.yaml  (+1 more)
backend/: Dockerfile  alembic.ini  auth.py  exceptions.py  logging_config.py  main.py  middlewares.py  models.py  pyproject.toml  requirements.txt  settings.py  utils.py
backend/admin/: auth_provider.py  config.py
backend/api/: authentication.py  chat.py  course.py  course_chapter.py  user.py
backend/async_tasks/: celery_config.py
backend/db/: config.py  exceptions.py  models.py
backend/db/models/: all_models.py
backend/db/services/: base.py  chat.py  course.py  course_chapter.py  message.py  theme.py  user.py  video.py
backend/kinescope/: api.py
backend/migrations/: env.py
backend/migrations/versions/: 2023-08-04_add_mentor_relation.py  2023-08-30_add_course_chapter_welcome_message.py  2023-08-30_add_is_active_to_user.py  2023-08-31_add_get_welcome_message.py  2023-12-07_add_video_description.py  2024-03-24_add_payment_number.py  2024-03-24_change_payment_number_type.py  2024-06-15_add_chat_type.py  2024-06-15_add_image_type.py  2b3ab9780760_.py  4b599d458678_remove_has_subscription.py  7b2d8687bf13_test.py  7ec49afe420f_init.py  ac09dc0c31e5_test.py  c37ea1a80143_init.py  c994f7a3d622_.py  (+1 more)
backend/s3/: api.py
backend/src/: auth.py  exceptions.py  logging_config.py  main.py  middlewares.py  models.py  schemas.py  settings.py  text_constants.py  utils.py
(+173 files in other folders)
